<resources>
    <string name="app_name">Grihasthi</string>
    <string name="HeaderLoginPage">GRIHASTHI GENERAL STORE</string>
    <string name="add_stock">Add Stock</string>
    <string name="sell_stock">Sell Stock</string>
    <string name="add_update_product_button">ADD / UPDATE PRODUCT</string>
    <string name="GetStockDetails">GET STOCK DETAILS</string>
    <string name="add_update_header_text">ADD / UPDATE</string>
    <string name="add_product_button_text">ADD PRODUCT</string>
    <string name="update_product_button_text">UPDATE PRODUCT</string>
<<<<<<< HEAD
    <string name="title_activity_main_page">MainPage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">GRIHASTHI</string>
    <string name="nav_header_subtitle">GENERAL STORE</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string-array name="array_product">
<item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>




    </string-array>
=======
>>>>>>> parent of abbbdf1... Merge pull request #1 from manishmrinal/Adding-Widgets
</resources>
